; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c_set_interp_require.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c_set_interp_require.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pp_require_safe = common dso_local global i32 0, align 4
@PL_ppaddr = common dso_local global i32* null, align 8
@OP_REQUIRE = common dso_local global i64 0, align 8
@OP_DOFILE = common dso_local global i64 0, align 8
@pp_require_orig = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @set_interp_require to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_interp_require(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load i32, i32* @pp_require_safe, align 4
  %7 = load i32*, i32** @PL_ppaddr, align 8
  %8 = load i64, i64* @OP_REQUIRE, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  store i32 %6, i32* %9, align 4
  %10 = load i32, i32* @pp_require_safe, align 4
  %11 = load i32*, i32** @PL_ppaddr, align 8
  %12 = load i64, i64* @OP_DOFILE, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  store i32 %10, i32* %13, align 4
  br label %23

14:                                               ; preds = %1
  %15 = load i32, i32* @pp_require_orig, align 4
  %16 = load i32*, i32** @PL_ppaddr, align 8
  %17 = load i64, i64* @OP_REQUIRE, align 8
  %18 = getelementptr inbounds i32, i32* %16, i64 %17
  store i32 %15, i32* %18, align 4
  %19 = load i32, i32* @pp_require_orig, align 4
  %20 = load i32*, i32** @PL_ppaddr, align 8
  %21 = load i64, i64* @OP_DOFILE, align 8
  %22 = getelementptr inbounds i32, i32* %20, i64 %21
  store i32 %19, i32* %22, align 4
  br label %23

23:                                               ; preds = %14, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
